--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,21 +5,17 @@
 
 <nav class="py-4">
   <div class="container mx-auto flex justify-between items-center">
-    <h5 class="text-xl md:text-2xl font-semibold"><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h5>
+    <h5 class="text-xl md:text-2xl font-semibold"><a href="{{ '/' | relative_url }}">{{}}</a></h5> 
     <div class="my-auto hidden md:flex items-center space-x-4">
       
       <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
         href="/">home</a>
-
-      {%- if titles_size > 0 -%}
-      {%- for path in page_paths -%}
-      {%- assign my_page = site.pages | where: "path", path | first -%}
-      {%- if my_page.title and my_page.hide_in_nav != true -%}
       <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
-        href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-      {%- endif -%}
-      {%- endfor -%}
-      {%- endif -%}
+        href="/pages/about.html">about</a>
+      <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
+        href="/pages/gallery.html">gallery</a>
+      <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
+        href="/tags">posts</a>
 
       <div class="hover:scale-105 duration-300">
         <button id="darkModeToggle" aria-label="Toggle Dark mode" class="p-2 rounded-lg">
