--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
 
 <nav class="py-4">
   <div class="container mx-auto flex justify-between items-center">
-    <h5 class="text-xl md:text-2xl font-semibold"><a href="{{ '/' | relative_url }}">{{}}</a></h5> 
+    <h5 class="text-xl md:text-2xl font-semibold"><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h5> 
     <div class="my-auto hidden md:flex items-center space-x-4">
       
       <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
