--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,8 +12,8 @@
         href="/">home</a>
       <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
         href="/pages/about.html">about</a>
-      <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
-        href="/pages/gallery.html">gallery</a>
+      <!-- <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
+        href="/pages/gallery.html">gallery</a> -->
       <a class="hover:scale-105 duration-300 page-link {% if my_page.url == current_page_url %}font-bold{% endif %}"
         href="/tags">posts</a>
 
