--- a/_includes/sharing.html
+++ b/_includes/sharing.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h3>Share Here</h3>
+  <h3>Share This Post</h3>
   <br/>
   <div class="sharing-buttons flex flex-wrap gap-1 justify-center">
     <a class="border-2 duration-200 ease inline-flex items-center mb-1 mr-1 transition p-2 rounded-full text-white share-button" target="_blank" rel="noopener" href="https://facebook.com/sharer/sharer.php?u={{ site.url | uri_escape | append: page.url }}" aria-label="Share on Facebook">
