--- a/_includes/social.html
+++ b/_includes/social.html
@@ -80,4 +80,18 @@
             </svg>
           </a>
           {% endif %}
+
+          {% if site.rrss.github %}
+          <a class="p-2" href="{{site.rrss.github}}">
+            <!-- <img class="h-5" src="assets\social\github-mark-white.svg"></img> -->
+             <p color="currentColor" ><b><u>GitHub</u></b></p>
+          </a>
+          {% endif %}
+
+          {% if site.rrss.itch %}
+          <a class="p-2" href="{{site.rrss.itch}}">
+            <!-- <img class="h-5" src="assets\social\itchio-logo-white.svg"></img> -->
+             <p color="currentColor" ><b><u>Itch.io</u></b></p>
+          </a>
+          {% endif %}
         </div>
