--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -118,7 +118,7 @@
   const sunIcon = document.getElementById('sun-icon');
   const moonIcon = document.getElementById('moon-icon');
   const html = document.documentElement;
-  let isDarkMode = true;
+  let isDarkMode = false;
 
   // Function to toggle dark/light mode
   function toggleDarkMode() {
